# pekmez-invoice

./: .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE.md  flake.nix  invoice.nix  main.typ
.github/workflows/: ci-unix.yml  ci.yml  main.yaml
example/: config.yaml  full-config.yaml
pkgs/: aarch64-apple-darwin.nix  aarch64-unknown-linux-gnu.nix  x86_64-pc-windows-gnu.nix  x86_64-unknown-linux-musl.nix
src/: cli.rs  details.yaml  invoice.typ  lib.rs  main.rs  settings.rs
src/lib/: template.typ
src/res/: defaults.yaml  template.typ
