[package]
name = "pekmez-invoice"
version = "0.1.0"
edition = "2024"
authors = ["Sait Sami Kocatas, https://deliganli.com"]

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
time = "0.3"
typst = "0.13"
typst-assets = { version = "0.13", features = ["fonts"] }
typst-pdf = "0.13"

[lib]
name = "typst_lib"
